--- a/contracts/package.json
+++ b/contracts/package.json
@@ -10,7 +10,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "hardhat": "^2.26.1"
+    "@1inch/solidity-utils": "^6.6.0",
+    "@chainlink/contracts": "0.8.0",
+    "@gnosis.pm/safe-contracts": "^1.3.0",
+    "@openzeppelin/contracts": "^5.4.0",
+    "dotenv": "^17.2.1",
+    "hardhat": "^2.26.1",
+    "solidity-utils": "^1.0.2"
   },
   "devDependencies": {
     "@nomicfoundation/hardhat-chai-matchers": "^2.0.0",
