--- a/contracts/package.json
+++ b/contracts/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@1inch/byte-utils": "^3.1.0",
+    "@1inch/cross-chain-sdk": "^0.1.15",
     "@1inch/solidity-utils": "^6.6.0",
     "@chainlink/contracts": "0.8.0",
     "@gnosis.pm/safe-contracts": "^1.3.0",
